<resources>
    <!--Application Constants-->




    <string name="app_name">Bills Organizer</string>
    <string name="noConnection">Check Internet connection please...</string>
    <string name="example">Example</string>
    <string name="authenticating">Authenticating...</string>
    <string name="loading">Loading all your stuff...</string>
    <string name="noaaccountyet">Not Registered? Click Here...</string>
    <string name="login_failed">Login failed</string>
    <string name="creating_account">Creating Account...</string>
    <string name="three_chars_at_least">at least 3 characters</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="between_four_to_ten_chars">between 4 and 10 alphanumeric characters</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="signup_failed">Signup failed</string>
    <string name="please_fill_the_field">Please fill the field</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="email_exists">Email already exists</string>
    <string name="welcomeMsg">Welcome to Bills Organizer family</string>
    <string name="scan_new_bill">Scan A New Bill</string>
    <string name="insert_new_bill">Insert A New Bill</string>
    <string name="view_edit_bills">View/Edit Bills</string>
    <string name="view_reports">View Bills Reports</string>
    <string name="settings">Settings</string>
    <string name="from_date_text">From:</string>
    <string name="to_date_text">To:</string>
    <string name="submit">Submit</string>
    <string name="date_picker_dialog">Date Picker Dialog</string>
    <string name="amount_text">Enter Amount:</string>
    <string name="paid_text">Paid</string>
    <string name="AboutUs_text">About Us</string>
    <string name="Feedback_text">Feedback</string>
    <string name="Help_text">Help</string>
    <string name="Account_text">Account</string>
    <string name="updateServer">Updating Server...</string>
    <string name="faildToAddBill">Failed to Add New Bill</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="notVailddates">Invalid Dates</string>
    <string name="gragh">Graph</string>
    <string name="table">Table</string>
    <string name="chart">Chart</string>
    <string name="notpaid">Not Paid</string>
    <string name="paid">Paid</string>
    <string name="annualalowed">Only annual report is allowed</string>
    <string name="nodataavailable">No data available for you</string>
    <string name="enteramount">Enter an amount please</string>
    <string name="amountbetween">Amount should be between 0 to 10000</string>
    <string name="error">Error!</string>
    <string name="newbillwasaddedsucc">A new bill was added succesfully!</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Scanning</string>
    <string name="lookinglogoMatch">Looking for logo matching..</string>
    <string name="done">Done</string>
    <string name="scan">Scan</string>
    <string name="cantCrop">Cant crop the image, change the points</string>
    <string name="ok">Ok</string>


</resources>
