<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_activity"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/scan_bill_activity"
            android:text="@string/Account_text"
            style="@style/Settings_Button_Style"
            android:layout_marginTop="@dimen/btn_margin_first_button"
            />

        <Button
            android:id="@+id/insert_bill_activity"
            android:text="@string/Help_text"
            style="@style/Settings_Button_Style"/>

        <Button
            android:id="@+id/view_edit_bills_activity"
            android:text="@string/Feedback_text"
            style="@style/Settings_Button_Style"/>

        <Button
            android:id="@+id/view_reports_activity"
            android:text="@string/AboutUs_text"
            style="@style/Settings_Button_Style"/>




    </LinearLayout>
</ScrollView>
